// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: For secret steps 1`] = `
<Fragment>
  <Step
    finished={false}
    onOpen={[Function]}
    open={true}
    renderForm={[Function]}
    stepNumber={1}
    stepTitle="onboarding.tutorial.with.github_action.create_secret.title"
  />
  <Step
    onOpen={[Function]}
    open={false}
    renderForm={[Function]}
    stepNumber={2}
    stepTitle="onboarding.tutorial.with.github_action.yaml.title"
  />
</Fragment>
`;

exports[`should render correctly: For yaml steps 1`] = `
<Fragment>
  <Step
    finished={true}
    onOpen={[Function]}
    open={false}
    renderForm={[Function]}
    stepNumber={1}
    stepTitle="onboarding.tutorial.with.github_action.create_secret.title"
  />
  <Step
    onOpen={[Function]}
    open={true}
    renderForm={[Function]}
    stepNumber={2}
    stepTitle="onboarding.tutorial.with.github_action.yaml.title"
  />
</Fragment>
`;
